--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@studio-freight/lenis": "^1.0.42",
     "gsap": "^3.13.0",
     "motion": "^12.16.0",
     "react": "^19.1.0",
